changed class name

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
           <ul class="glide__slides product-container">
             <li class="glide__slide">
               <div>
-                <div class="fake">
+                <div class="footer-image">
                   <img
                     src="images/footer1_334x370.png"
                     alt="EMBROIDERY STABILIZER"
@@ -68,7 +68,7 @@
             </li>
             <li class="glide__slide">
               <div>
-                <div class="fake">
+                <div class="footer-image">
                   <img
                     src="images/footer2_319x354.png"
                     alt="CUBBIE GREY ELEPHANT"
@@ -79,7 +79,7 @@
             </li>
             <li class="glide__slide">
               <div>
-                <div class="fake">
+                <div class="footer-image">
                   <img
                     src="images/footer3_4_356x395.png"
                     alt="KIMBERBELL CUP OF CHEER"
@@ -90,7 +90,7 @@
             </li>
             <li class="glide__slide">
               <div>
-                <div class="fake">
+                <div class="footer-image">
                   <img
                     src="images/footer3_4_356x395.png"
                     alt="KIMBERBELL TWO SCOOPS"
